--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* html {
+html {
   overflow-y: hidden;
-} */
+}
+html, body {
+  height: 100%;
+}
