--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,28 @@ html {
 html, body {
   height: 100%;
 }
+
+/* // https://tailwindcss.com/docs/functions-and-directives#layer */
+/* @layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+}
+
+@layer components {
+  .btn-blue {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  }
+}
+
+@layer utilities {
+  .filter-none {
+    filter: none;
+  }
+  .filter-grayscale {
+    filter: grayscale(100%);
+  }
+} */
